--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "mongoose": "^5.2.14",
+    "morgan": "^1.9.1",
     "react": "^16.5.0",
     "react-dom": "^16.5.0"
   }
