--- a/package.json
+++ b/package.json
@@ -36,18 +36,27 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^1.0.0",
     "react-hot-loader": "^4.3.6",
+    "style-loader": "^0.23.0",
     "webpack": "^4.18.0",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "mongoose": "^5.2.14",
     "morgan": "^1.9.1",
+    "pbkdf2-password": "^1.2.1",
     "react": "^16.5.0",
-    "react-dom": "^16.5.0"
+    "react-dom": "^16.5.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-timeago": "^4.1.9",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   }
 }
