--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "mongoose": "^5.2.14",
     "morgan": "^1.9.1",
     "pbkdf2-password": "^1.2.1",
+    "prop-types": "^15.6.2",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-redux": "^5.0.7",
