--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "pbkdf2-password": "^1.2.1",
     "prop-types": "^15.6.2",
     "react": "^16.5.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.5.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
